# ResourceBot

./: SWGTrackerMailImport.py  config-example.txt  pyproject.toml  readme.md
tests/: test_swgtracker_mail_import.py
utils/: auth.py
