[tool.poetry]
name = "swgtracker-mail-import"
version = "0.1.0"
description = ""
authors = ["Dustin Vannatter <dustin@vannatter.com>"]

[tool.poetry.dependencies]
python = "^3.9"
watchdog = "^2.1.6"
configparser = "^5.2.0"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
